<resources>
    <string name="app_name">椰青售货机</string>
    <string name="machine_id">123456</string>
    <string name="label_machine_id">机器编号：</string>
    <string name="label_machine_version">版本：</string>
    <string name="machine_version">1.0.0</string>
    <string name="label_ip">IP地址：</string>
    <string name="ip">172.22.115.114</string>
    <string name="label_pwsd_hints">请输入密码</string>
    <string name="btn_return">返回</string>
    <string name="btn_login_1">1</string>
    <string name="btn_login_2">2</string>
    <string name="btn_login_3">3</string>
    <string name="btn_login_4">4</string>
    <string name="btn_login_5">5</string>
    <string name="btn_login_6">6</string>
    <string name="btn_login_7">7</string>
    <string name="btn_login_8">8</string>
    <string name="btn_login_9">9</string>
    <string name="btn_login_0">0</string>
    <string name="btn_login_star">*</string>
    <string name="btn_login_well">#</string>
    <string name="btn_login_del">删除</string>
    <string name="btn_login_clear">清除</string>
    <string name="btn_login_enter">确定</string>
    <string name="btn_login_look">可见</string>
    <string name="label_welcome">程序启动中</string>
    <string name="label_others_setting">其它设置</string>
    <string name="label_sheet">三张信息表</string>
    <string name="label_goods_test">货道测试</string>
    <string name="label_ad_setting">广告设置</string>
    <string name="label_serialport_setting">串口设置</string>
    <string name="label_help">帮助工具</string>
    <string name="label_return_sales">返回销售</string>
    <string name="label_reboot">重新启动</string>
    <string name="label_sales_setting">销售设计</string>
    <string name="label_sales_analyze">统计分析</string>
    <string name="label_goods_local_id">机柜位置编号</string>
    <string name="label_goods_info">货物信息</string>
    <string name="label_goods_price">价格</string>
    <string name="label_goods_quanlity">库存</string>
    <string name="label_goods_change">更换商品</string>
    <string name="label_init_goods">初始化商品-测试用</string>
    <string name="label_full_goods">补满商品库存</string>
    <string name="label_clear_goods">下架所有商品</string>
    <string name="label_save">保存</string>
    <string name="label_fire">确定</string>
    <string name="label_cancel">取消</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="lable_system_parm_setting">系统参数设置</string>
    <string name="label_wifi_setting">WIFI设置</string>
    <string name="label_mobile_network_settings">移动网络设置</string>
    <string name="label_change_pswd">修改后台密码</string>
    <string name="label_download_pic">下载产品图片</string>
    <string name="label_change_tel">修改电话号码</string>
    <string name="label_update_basic_data">更新基础数据</string>
    <string name="label_download_ad">下载广告</string>
    <string name="label_null">无</string>
    <string name="about_msg">
        Serial Port API sample v1.1\n
        \n
        This program is the sample application provided with project android-serialport-api.\n
        \n
        More information and bug report on [http://code.google.com/p/android-serialport-api]\n
        \n
        Copyright 2010-2011 Cedric Priscal\n
        \n
        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at\n
        \n
        http://www.apache.org/licenses/LICENSE-2.0\n
        \n
        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.\n
	</string>
    <string name="error_configuration">Please configure your serial port first.</string>
    <string name="error_security">You do not have read/write permission to the serial
		port.</string>
    <string name="error_unknown">The serial port can not be opened for an unknown
		reason.</string>

    <string name="revolution_title_str">分辨率设置</string>
    <string name="revolution_title_listpreference">选择分辨率</string>
    <string-array name="revolution_entries_str">
        <item>QCIF(176×144像素)</item>
        <item>CIF(352×288像素)</item>
        <item>480P(高清)</item>
    </string-array>
    <string-array name="revolution_entries_values_str">
        <item>qcif</item>
        <item>cif</item>
        <item>480p</item>
    </string-array>
    <string name="revolution_default_str">qcif</string>
    <string name="revolution_dialog_title">请选择你要设定的分辨率</string>
    <string name="revolution_summary_str">QCIF(176×144像素)</string>

    <string name="spytime_title_str">监控时间设置</string>
    <string name="spytime_title_listpreference">选择监控时间</string>
    <string-array name="spytime_entries_str">
        <item>24小时监控</item>
        <item>8:00~22:00</item>
        <item>6:00~24:00</item>
    </string-array>
    <string-array name="spytime_entries_values_str">
        <item>24hours</item>
        <item>8002200</item>
        <item>6002400</item>
    </string-array>
    <string name="spytime_default_str">24hours</string>
    <string name="spytime_dialog_title">请选择你要设定的时间段</string>
    <string name="spytime_summary_str">24小时监控</string>
    <string name="title_wepay">微信支付</string>
    <string name="title_alipay">支付宝</string>
    <string name="title_cash">现金支付</string>
    <string name="title_return">返回</string>
    <string name="label_goods_id">货物编号</string>
    <string name="label_sale_status">销售状态</string>
    <string name="label_goods_del">下架商品</string>
</resources>
