<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorTransparencyWhite" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/label_machine_id"
            android:textSize="24sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="@string/machine_id"
            android:textSize="24sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/label_machine_version"
            android:textSize="24sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/machine_version"
            android:textSize="24sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:text="@string/label_ip"
            android:textSize="24sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:text="@string/ip"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/label_pwsd_hints"
        android:textSize="50sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="300dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_login_1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="@string/btn_login_1"
                android:textSize="50sp"/>
            <Button
                android:id="@+id/btn_login_2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="@string/btn_login_2"
                android:textSize="50sp"/>
            <Button
                android:id="@+id/btn_login_3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="@string/btn_login_3"
                android:textSize="50sp"/>
            <Button
                android:id="@+id/btn_login_del"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="@string/btn_login_del"
                android:textSize="50sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_login_4"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="@string/btn_login_4"
                android:textSize="50sp"/>
            <Button
                android:id="@+id/btn_login_5"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="@string/btn_login_5"
                android:textSize="50sp"/>
            <Button
                android:id="@+id/btn_login_6"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="@string/btn_login_6"
                android:textSize="50sp"/>
            <Button
                android:id="@+id/btn_login_clear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:text="@string/btn_login_clear"
                android:textSize="50sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_login_7"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="@string/btn_login_7"
                android:textSize="50sp"/>
            <Button
                android:id="@+id/btn_login_8"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="@string/btn_login_8"
                android:textSize="50sp"/>
            <Button
                android:id="@+id/btn_login_9"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="@string/btn_login_9"
                android:textSize="50sp"/>
            <Button
                android:id="@+id/btn_login_look"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="@string/btn_login_look"
                android:textSize="50sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_login_star"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="@string/btn_login_star"
                android:textSize="50sp"/>
            <Button
                android:id="@+id/btn_login_0"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="@string/btn_login_0"
                android:textSize="50sp"/>
            <Button
                android:id="@+id/btn_login_well"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="@string/btn_login_well"
                android:textSize="50sp"/>
            <Button
                android:id="@+id/btn_login_enter"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="@string/btn_login_enter"
                android:textSize="50sp"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_login_return"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="250dp"
        android:layout_marginRight="250dp"
        android:layout_marginBottom="100dp"
        android:text="@string/btn_return"
        android:textSize="50sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorTransparencyWhite" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/label_machine_id"
            android:textSize="24sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="@string/machine_id"
            android:textSize="24sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/label_machine_version"
            android:textSize="24sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/machine_version"
            android:textSize="24sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:text="@string/label_ip"
            android:textSize="24sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:text="@string/ip"
            android:textSize="24sp" />
    </LinearLayout>
</LinearLayout>
