<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorTransparencyBlack">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/label_machine_id"
                android:textSize="24sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/machine_id"
                android:textSize="24sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/label_machine_version"
                android:textSize="24sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/machine_version"
                android:textSize="24sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:text="@string/label_ip"
                android:textSize="24sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:text="@string/ip"
                android:textSize="24sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBlack"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/ic_settings_black_24dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_system_setting"
                android:textSize="30sp"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        android:layout_gravity="center">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:stretchColumns="0,1">

            <TableRow
                android:layout_weight="1">
                <Button
                    android:id="@+id/btn_sys_parm_setting"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="#ff0099cc"
                    android:gravity="center"
                    android:text="@string/lable_system_parm_setting"
                    android:textColor="@color/colorWhite"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btn_network_setting"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="#ff0099cc"
                    android:gravity="center"
                    android:text="@string/label_network_setting"
                    android:textColor="@color/colorWhite"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:layout_weight="1">
                <Button
                    android:id="@+id/btn_update_goods"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="#ff0099cc"
                    android:gravity="center"
                    android:text="@string/label_update_goods"
                    android:textColor="@color/colorWhite"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btn_change_pswd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="#ff0099cc"
                    android:gravity="center"
                    android:text="@string/label_change_pswd"
                    android:textColor="@color/colorWhite"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn_download_pic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="#ff0099cc"
                    android:gravity="center"
                    android:text="@string/label_download_pic"
                    android:textColor="@color/colorWhite"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btn_change_tel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="#ff0099cc"
                    android:gravity="center"
                    android:text="@string/label_change_tel"
                    android:textColor="@color/colorWhite"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:layout_weight="1">

                <Button
                    android:id="@+id/update_basic_data"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="#ff0099cc"
                    android:gravity="center"
                    android:text="@string/label_update_basic_data"
                    android:textColor="@color/colorWhite"
                    android:textSize="30sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="#ff0099cc"
                    android:gravity="center"
                    android:text="@string/label_null"
                    android:textColor="@color/colorWhite"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn_download_ad"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="#ff0099cc"
                    android:gravity="center"
                    android:text="@string/label_download_ad"
                    android:textColor="@color/colorWhite"
                    android:textSize="30sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="#ff0099cc"
                    android:gravity="center"
                    android:text="@string/label_null"
                    android:textColor="@color/colorWhite"
                    android:textSize="30sp" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">
        <Button
            android:id="@+id/system_setting_back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="250dp"
            android:layout_marginRight="250dp"
            android:layout_marginBottom="50dp"
            android:text="@string/btn_return"
            android:textSize="50sp" />
    </LinearLayout>

</LinearLayout>