<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_header">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:maxLines="1"
            android:text="@string/label_goods_id"
            android:textColor="#000000"
            android:textSize="15sp" />

        <View
            android:layout_width="1.5dp"
            android:layout_height="match_parent"
            android:background="#000000" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:maxLines="1"
            android:text="@string/label_goods_info"
            android:textColor="#000000"
            android:textSize="15sp" />

        <View
            android:layout_width="1.5dp"
            android:layout_height="match_parent"
            android:background="#000000" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:maxLines="1"
            android:text="@string/label_goods_price"
            android:textColor="#000000"
            android:textSize="15sp" />

        <View
            android:layout_width="1.5dp"
            android:layout_height="match_parent"
            android:background="#000000" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dip"
            android:maxLines="1"
            android:text="@string/label_goods_quanlity"
            android:textColor="#000000"
            android:textSize="15sp" />

        <View
            android:layout_width="1.5dp"
            android:layout_height="match_parent"
            android:background="#000000" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dip"
            android:maxLines="1"
            android:text="@string/label_sale_status"
            android:textColor="#000000"
            android:textSize="15sp" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_sales_setting"
        android:overScrollMode="never"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="50dp">
    </android.support.v7.widget.RecyclerView>

    <Button
        android:id="@+id/btn_sales_setting_return"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="250dp"
        android:layout_marginRight="250dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="100dp"
        android:text="@string/btn_return"
        android:textSize="50sp"/>
</LinearLayout>
